--- a/Radius/Info.plist
+++ b/Radius/Info.plist
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This apps needs your location to share it on the map</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This apps needs your location to share it on the map</string>
+	<key>NSLocationUsageDescription</key>
+	<string>This apps needs your location to share it on the map</string>
+</dict>
 </plist>
